--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.44.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-preprocess": "^4.10.7",
+		"typescript": "^4.7.4"
+	}
 }
